[tool.poetry]
name = "saveme"
version = "0.0.2"
description = "OSX Menu Bar for AWS-Vault Metadata Server (via launchctl)"
authors = ["Marcus Young <myoung34@my.apsu.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6,<3.9"
rumps = "^0.3.0"
shellescape = "^3.8.1"
Chameleon = "^3.9.0"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
pytest = "^5.3"
pylint = "^2.4"
pytest-cov = "^2.8"
coverage = "^5.0"
isort = "^4.3"
tox = "^3.14"
mypy = "^0.782"
bandit = "^1.6.2"
